force-app/main/default/objects/Related_Process_Template__c/Related_Process_Template__c.object-meta.xml
<CustomObject>
    <label>Related Process Template</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Related Process Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Process Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>