force-app/main/default/objects/Related_Process_Template__c/fields/Custom_Logic_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>Custom_Logic_In_Progress__c</fullName>
    <label>Custom Logic In Progress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>