force-app/main/default/objects/Related_Process_Template__c/fields/In_Progress_Requirement__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Requirement__c</fullName>
    <label>In Progress Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Step Completed</fullName>
            </value>
            <value>
                <fullName>Custom Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>