force-app/main/default/objects/Related_Process_Template__c/fields/Parent_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Process_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Process Template</label>
    <referenceTo>Process_Template__c</referenceTo>
    <relationshipLabel>Related Process Templates (Parent Process Template)</relationshipLabel>
    <relationshipName>Parent_Process_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>