force-app/main/default/objects/Related_Process_Template__c/fields/Sub_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Sub_Process_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sub Process Template</label>
    <referenceTo>Process_Template__c</referenceTo>
    <relationshipLabel>Sub Process Templates</relationshipLabel>
    <relationshipName>Sub_Process_Templates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>